Intento de arreglo de Errores